Many miscellaneous improvements